# computer-science

./: .gitignore  readme.md
00.assembly/: readme.md
01.c/: readme.md
01.c/02.syntax/01.datatype/: step2-보수.c  step3-16진수_음수
01.c/02.syntax/01.io/: 1000.c  정수입력.c
01.c/02.syntax/02.if/: 1330.c
01.c/02.syntax/02.연산자/: step1.c  step2.c
01.c/02.syntax/03.for/: 2739.c
01.c/02.syntax/03.pointer/: step1-what.c  step10-pointer++2  step11-pointer++3  step11-pointer++3.c  step12-배열포인터  (+17 more)
01.c/04.stl/: CMakeLists.txt  readme.md
01.c/04.stl/00.core/01.memory_allocator/: CMakeLists.txt  readme  test_allocator
01.c/04.stl/00.core/01.memory_allocator/include/: block.h  memory_allocator.h
01.c/04.stl/00.core/01.memory_allocator/src/: memory_allocator.c
01.c/04.stl/00.core/01.memory_allocator/tests/: test_allocator.c
01.c/04.stl/00.core/02.concurrency_control/: CMakeLists.txt  readme
01.c/04.stl/00.core/02.concurrency_control/include/: my_condvar.h  my_mutex.h  my_rwlock.h
01.c/04.stl/00.core/02.concurrency_control/src/: my_condvar.c  my_mutex.c  my_rwlock.c
01.c/04.stl/00.core/02.concurrency_control/tests/: test_condvar.c  test_mutex.c  test_rwlock.c  test_sync.c
01.c/04.stl/00.core/02.thread/: readme
01.c/04.stl/00.core/03.synchronization/: readme
01.c/04.stl/02.vector/: CMakeLists.txt  readme
01.c/04.stl/02.vector/include/: kirby_vector.h
01.c/04.stl/02.vector/src/: kirby_vector.c
01.c/04.stl/02.vector/tests/: test_vector.c
01.c/04.stl/03.arraylist/: CMakeLists.txt
01.c/04.stl/03.arraylist/include/: my_arraylist.h
01.c/04.stl/03.arraylist/src/: my_arraylist.c
01.c/04.stl/03.arraylist/tests/: test_arraylist.c
01.c/04.stl/03.linkedlist/src/: linkedlist.c
01.c/04.stl/03.linkedlist/tests/: test_linkedlist.c
01.c/04.stl/04.linkedlist/: CMakeLists.txt
01.c/04.stl/04.linkedlist/include/: linkedlist.h
01.c/04.stl/04.linkedlist/problem_solve/: 707-design-linked-list.c
01.c/04.stl/04.linkedlist/src/: linkedlist.c
01.c/04.stl/05.string/: readme
01.c/04.stl/05.string/etc/what/: step5-strcmp  step5-strcmp.c
01.c/04.stl/05.string/include/: my_string.h
01.c/04.stl/05.string/what/: step1  step2-strlen  step2-strlen.c
01.c/04.stl/06.hash/: hash-table.c
01.c/04.stl/08.queue/: build-queue-from-scratch.kt
01.c/04.stl/08.stack/: 10828-스택-array-ver.c
01.c/04.stl/09.priority_queue/: priority-queue-using-min-heap.c
01.c/04.stl/10.tree/binary_search_tree/: binary-search-tree.c
01.c/04.stl/11.heap/: memory-management-using-heap.c
01.c/04.stl/11.tree/AVL_tree/: AVL-tree.c
01.c/04.stl/12.heap/: 11279-최대_힙.c
01.c/04.stl/array/백준_07-2차원배열/: 02563-색종이.c  02566-최댓값.c  10798-세로읽기.c
01.c/04.stl/hash/: consistent-hashing.c  hash-map.c
01.c/04.stl/heap/: 01927-최소_힙.c  heap.c
01.c/04.stl/map/: map.c
01.c/04.stl/queue/: 10845-큐-array-ver.c
01.c/04.stl/stack/: 10828-스택-linkedlist-ver.c  build-stack-from-scratch.md
01.c/04.stl/string/: step1-what.c  step3-strcpy  step3-strcpy.c  step4-strcat  step4-strcat.c  step5-strcmp  step6-pointer  step6-pointer.c
01.c/04.stl/tree/binary_search_tree/: readme.me
01.c/04.stl/tree/red_black_tree/: red-black-tree.c
01.c/c_syntax/: step02DataTypes.cpp  step05SizeOfAndTypeConversion.cpp  step12Loop_WhileAndDoWhile.cpp  step20PointerInArray.cpp  step21Midterm3.cpp  step22Function.cpp  step27Midterm4.cpp  step33FileIO.cpp  step35CppBasics.cpp
02.computer-architecture/: readme.md
02.cpp/: CMakeLists.txt
02.cpp/03.stl/: CmakeLists.txt
03.computer-architecture/: readme.md
03.computer-architecture/Nand2Tetris/: readme.md
03.computer-architecture/encoding/: encoding_demo.py
04.network/: readme.md
04.network/eventloop/: event_loop.py
04.os/: readme.md
04.os/pintos/: readme
05.network/compression/: gzip-http-response-header-checker.py
05.network/echo-server/: readme.md  stress_test.py
05.network/network-protocols/: readme
05.network/web-server/: readme.md
06.compiler/JelloVM/: readme.me
06.compiler/jit/: step2-self_jit_x64.c  summary.me
07.backend-engineering/: readme.md
07.backend-engineering/event_loop_vs_multi_thread/: cpu-benchmark.js  create-files.js  io-benchmark.js  package-lock.json  package.json  readme.md
07.backend-engineering/eventloop/: summary
08.parallel_programming/: readme.md
08.parallel_programming/1.1brc/: readme.md
Nand2Tetris/01/: And.hdl  And16.hdl  DMux.hdl  DMux4Way.hdl  Or.hdl  Or16.hdl  Xor.hdl
Nand2Tetris/documentation/: source.md
Nand2Tetris/util/: util_documentation.md
backend-engineering/: readme.md
c/: readme.md  step01HelloWorld.cpp  step03Variables.cpp  step06InputOutput.cpp  step07CharAndASCII.cpp  step11SwitchAndGoto.cpp  step13Loop_For.cpp  step15ListAndArray.cpp  step16MultiDimensionalArray.cpp  step18Pointer.cpp  step19PointerAndArray.cpp  step32BitwiseOperation.cpp  step35CppBasics.cpp  step36Overload.cpp
c/c_syntax/: step04BinaryAndDataFormat.cpp  step08Midterm1.cpp  step09Operators.cpp  step10ConditionalStmt_If.cpp  step14Midterm2.cpp  step17String.cpp  step19ArrayPointer.cpp  step23CallByValueAndReference.cpp  step24Prototype.cpp  step25Recursive.cpp  step26ParameterArray.cpp  step28TypeDef.cpp  step29Struct.cpp  step30Midterm5.cpp  step31Constant.cpp  step34UsefulFunctions.cpp
c/curiousity/: double-pointer.c  fork.c  malloc-vs-new.c  multiple-fork.c  oop.c
c/lldb/: prog  summary.me
compiler/: readme.md
compiler/JelloVM/: jello.py
compiler/crafting_compiler/: curiousity  readme.md
compiler/jit/: step1-basic_self_jit_x64.c
compiler/my_compiler/: readme.md
compiler/practice_compiler/: readme.md
computer-architecture/: readme.md
computer-architecture/Nand2Tetris/: readme.md
network/: readme.md
network/eventloop/: event_loop.py  server.py
network/multi-thread/: binary-semaphore.c  mutex.c
network/multi-thread/htcpcp-server/: CMakeLists.txt
network/multi-thread/htcpcp-server/src/: kvp_list.c  kvp_list.h  string_utils.c
os/: readme.md
os/memory_management/: main
os/pintos/: readme
os/process/: 2-multi-processing.py  3-multi-processing-multi-thread.py  main
os/thread/: mutex
(+543 files in other folders)
